# LoadFlow_NR_OpenCL_MEX

./: .gitignore  CMakeLists.txt  DataTypes.h  compile_mex_fcn.m  logger.txt  main.m  ocl_kernel_src.cl  oclpf.cpp  oclpf.h  oclpf_main.cpp
DataBank/: DataIO.cpp  DataIO.h  DataManager.cpp  DataManager.h  DataVault.cpp  DataVault.h
Data_Bank/: Data_Bank.cpp  Data_Bank.h
OpenCL/: OCLManager.h
Power_System/: Power_System.h  Power_System_Element.cpp  Power_System_Element.h  Power_System_Element_Types.h
SEE/: PowerSystem.h  PowerSystemElement.cpp  PowerSystemElement.h
cpp_src/: CMakeLists.txt  NewtonRaphsonCPU.cpp  main.cpp  mex_Newton_Raphson_OpenCL.cpp  mex_Newton_Raphson_OpenCL.h
cpp_src/Extra/: E_Matlab_Data_Structure.h
cpp_src/INFO/: Logger.h
cpp_src/OpenCL_Core/: OCLC_Compute_Obj.cpp  OCLC_Compute_Obj.h  OCLC_Compute_Obj_Extra_01.cpp  OCLC_Compute_Obj_Extra_02.cpp
cpp_src/OpenCL_Extra/: ocl_kernel_src.cl
cpp_src/Power_System_Core/: PSC_electrical_power_system.h  PSC_electrical_transformer.cpp  PSC_electrical_transformer.h  PSC_lines.cpp  PSC_lines.h  PSC_nodes.cpp  PSC_nodes.h
cpp_src/Power_System_Extra/: PSE_Power_Flow_Data.cpp  PSE_Power_Flow_Data.h
input/: date_IEEE_30_bus.xlsx  date_TEST2_FIN2.xlsx  ~$date_ZX.xlsx
matlab_src/: compile.m  oclpf.mexw64  yprime.cpp
src/: CASE_IEEE_30.m  CASE_TEST2_FIN2.m  ElectricalTransformer.m  NetworkData.m  NetworkLineData.m  RunPF_OCL.m  load_data.m
